<resources>
    <string name="app_name">Cryptocompare</string>
    <string name="activity_converter">Converter</string>
    <string name="hint">Enter Value in Base Currency</string>
    <string name="button_text">GO</string>
    <string name="resultPlaceHolder">0.00000000</string>
    <string name="text">Conversion From Base To Btc</string>
    <string name="empty">No Rates Found</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="base">Base Currency</string>
    <string name="btc">1 Bitcoin</string>
    <string name="eth">Ethereum</string>
    <string name="ethText">ETH</string>
    <string name="btcText">BTC</string>
    <string name="refr">Refresh</string>
    <string name="prefrence">Preferences</string>
    <string name="note">* Kindly Note That All Currencies are in the form NGN, USD, EUR etc......</string>
    <string name="buttonPref">ADD</string>+
    <string name="prefTitle">Add More Currencies</string>
    <string name="addCur">Type in Your Desired Currency</string>
    <string name="settings_menu_item">Preferences</string>
    <string name="splashImage">Splash Image</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
