<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.crptocompare.PrefrenceActivity">

    <TextView
        android:padding="16dp"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefTitle"/>
    <TextView
        android:padding="16dp"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <EditText
            android:id="@+id/addCurrencyField"
            android:maxLength="3"
            android:textAllCaps="true"
            android:inputType="text"
            android:hint="@string/addCur"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            />
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:background="@color/colorButtonBackground"
            android:text="@string/buttonPref"/>
    </LinearLayout>
</LinearLayout>
